tests/semantic_errors/sasha1000_3.tl
require "ifj21"

global name : function (integer)
function name    (a : number)
    local id : nil
    local id1 : nil

    if 1 then
        local id1 : string = "AV"
        if id1 then
            id = nil
            local id1 : number
            id1 = b
        else end
    else end

end

function main()
end

main()
